[] Update toolbar when view changes (List <-> Tree)
[] Set PWS title when opening a database at startup
[] Allow List view to process all characters e.g. Page Up/Down, Home, End,
Arrows etc.
[] Fix program crash on clicking CompareResults dialog header.
[1849818] Browse-to would occasionally falsely report "failed to
browse to URL".

Changes to Existing Features in 3.12
====================================
[1846688] When generating a new password, it is no longer displayed in
a separate window for approval. If you want to generate another
password, just click on Generate again. If you want to revert to the
existing password when editing an entry, just click on Cancel.
[] New password generation option: Pronounceable passwords. Thanks to
Tom Van Vleck, Morrie Gasser, and Dan Edwards.

New Features for 3.12
=======================
[] An entry may have multiple references, or "shortcuts" to it. These
may be thought of as "synonyms" of the entry. See online help for
details.
[] Graphics added to menus.
[1842449] Implement standard F3 for repeat Find shortcut.

Bugs fixed in 3.11.1
====================
[] No longer crashes when pulling down Edit menu in List view with no
entry selected.
[1837534] Autotype handles tab correctly when typing to Internet
Explorer.
[] Copy Username and Copy Password new toolbar icons swapped back.

Changes to Existing Features in 3.11.1
======================================
[] You can now check for newer version via Help->About
[] List view displays an icon in each row showing the type of entry

New Features for 3.11
=====================
[1765240] Add "Clear clipboard" item to tray icon context menu.
[1727768] Copy URL to clipboard added to menus (Ctrl+Alt+L).
[1526169] Add more shortcut keys to add/edit dialog.
[] Give user access to Reports from View menu (only in the same directory
as current open database), since more information is being written there.
[] Give user access to the Compare report from the Compare results dialog.